kubernetes/final/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
  labels:
    app: flask-demo
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: flask-demo
  type: NodePort  # add this only if you are using GKE cluster
